# ppt-design-md

./: .gitignore  .lighthouserc.json  AGENTS.md  README.md  package-lock.json  package.json  render.yaml  vercel.json
.github/workflows/: lighthouse.yml
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  cli.py  design_md.py  extractor.py  heuristics.py  main.py  models.py  storage.py  utils.py
backend/runs/0d955cd173f8/: meta.json
backend/runs/0f2d673b230c/: meta.json
backend/runs/0fe5b92f7791/: meta.json
backend/runs/2147fe54bc83/: meta.json
backend/runs/28c4981be445/: meta.json
backend/runs/2d84afa7912e/: design.md  meta.json
backend/runs/3c4f18c59fd2/: meta.json
backend/runs/43a89724aa58/: design.edited.md  meta.json
backend/runs/519b6fd92c6f/: meta.json
backend/runs/7892c525d6a9/: analysis.json  meta.json
backend/runs/841026e4e63f/: meta.json
backend/runs/9aee8a864805/: meta.json
backend/runs/a1078b6e2bcb/: meta.json
backend/runs/ae3fe45185ef/: meta.json
backend/runs/fa44556b00d2/: meta.json
backend/tests/: test_api.py  test_cli.py  test_design_md.py  test_extractor.py  test_extractor_helpers.py  test_heuristics.py  test_storage.py  test_utils.py
docs/: system-design-review.en.md  system-design-review.zh-TW.md
examples/: README.md  sample-output.design.md  sample1.generated.analysis.json  sample1.generated.design.md
frontend/: app.js  env.js  index.html  styles.css
frontend/e2e/: upload-smoke.spec.js
